# xiaoai-plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  armv7-linux-gnueabihf.cmake  boot.sh  config.ini.example  install.sh  oh2p.tar.gz.sha256
.github/workflows/: release.yml
assets/: keywords.txt  pinyin_dict.txt
src/: main.cpp
src/app/: app.cpp  app.hpp
src/audio/: aec_webrtc.cpp  aec_webrtc.hpp  player.hpp  player_aplay.cpp  recorder.hpp  recorder_arecord.cpp
src/common/: log.hpp
src/config/: config.cpp  config.hpp
src/realtime/: client.cpp  client.hpp  frame_codec.cpp  frame_codec.hpp  types.hpp
src/wakeup/: gate.cpp  gate.hpp  kws_engine.hpp  kws_zipformer.cpp  kws_zipformer.hpp  local_listener.cpp  local_listener.hpp  trigger.cpp  trigger.hpp
toolchain/: Dockerfile  Makefile  README.md  build-sherpa-static.sh  package-release.sh  package-runtime.sh  runtime-smoke-test.sh  runtime-test.Dockerfile  verify-toolchain.sh
toolchain/runtime-test/: aplay-wrapper.sh  arecord-wrapper.sh  asound.conf
